--- a/client/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas.component.html
+++ b/client/src/app/funcionario-pages/manutencao-roupas/manutencao-roupas.component.html
@@ -1,3 +1,12 @@
+<div
+  *ngIf="mensagem.length > 0"
+  class="alert alert-danger alert-dismissible fade show"
+  role="alert"
+>
+  <h4 class="alert-heading">{{mensagem}}</h4>  
+  <p>{{mensagem_detalhes}}</p>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 <div class="background">
   <div
     class="d-flex justify-content-center align-items-center"
@@ -40,15 +49,13 @@
                   </tr>
                 </thead>
                 <tbody class="table-items-body custom-tr-items">
-                  <tr *ngFor="let item of orderRoupa">
+                  <tr *ngFor="let item of roupas">
                     <td style="width: 54%">{{ item.descricao }}</td>
                     <td style="width: 20%">
-                      {{
-                        formatarMinutosParaDiasUteis(item.prazoDias)
-                      }}
+                      {{ item.prazoDias }}
                     </td>
                     <td style="width: 10%">
-                      R${{ formatarValor(item.preco) }}
+                      R$ {{ formatarValor(item.preco) }}
                     </td>
                     <td
                       style="width: 8%; text-align: center; border-right: none"
