--- a/client/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios.component.html
+++ b/client/src/app/funcionario-pages/manutencao-funcionarios/manutencao-funcionarios.component.html
@@ -40,9 +40,9 @@
                   </tr>
                 </thead>
                 <tbody class="table-items-body custom-tr-items">
-                  <tr *ngFor="let item of funcionario">
-                    <td style="width: 30%">{{ item.nome }}</td>
-                    <td style="width: 30%">{{ item.email }}</td>
+                  <tr *ngFor="let item of funcionarios">
+                    <td style="width: 30%">{{ item.usuario.nome }}</td>
+                    <td style="width: 30%">{{ item.usuario.email }}</td>
                     <td style="width: 24%">{{ item.dataNascimento }}</td>
                     <td
                       style="width: 8%; text-align: center; border-right: none"
@@ -51,7 +51,7 @@
                         type="button"
                         class="btn-table btn-edit"
                         (click)="editar(item)"
-                      >
+                      > 
                         Editar
                       </button>
                     </td>
