Adicionar service e modal do relatorio de clientes
Funcionamento atual no console somente, sem efeito na aplicação web

--- a/client/src/app/funcionario-pages/relatorio-clientes/relatorio-clientes.component.html
+++ b/client/src/app/funcionario-pages/relatorio-clientes/relatorio-clientes.component.html
@@ -47,9 +47,11 @@
                 <th>Email</th>
                 <th>Telefone</th>
                 <th>Endereço</th>
-                <th>Qntd Pedidos</th>
               </tr>
             </thead>
+            <tbody>
+              <!-- Listagem ocorre aqui -->
+            </tbody>
           </table> 
         </div>
       </div>
