--- a/client/src/app/funcionario-pages/homepage/homepage.component.html
+++ b/client/src/app/funcionario-pages/homepage/homepage.component.html
@@ -6,34 +6,35 @@
         <thead>
           <tr>
             <th scope="col">Nº Pedido</th>
-            <th scope="col">Data</th>
+            <th scope="col">Data Pedido</th>
             <th scope="col">Roupas</th>
             <th scope="col">Prazo</th>
             <th scope="col">Valor Total</th>
+            <th scope="col">Situação</th>
             <th scope="col">Ações</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let pedido of listaPedidos">
+          <tr *ngFor="let pedido of pedidos">
             <td>{{ pedido.numeroPedido }}</td>
             <td>{{ pedido.dataPedido | date : "dd/MM/yyyy HH:mm" }}</td>
             <td>
-              <p style="word-spacing: 10px">Peça | Preço | Tempo de Serviço</p>
               <ul
                 class="list-inline"
                 *ngFor="let roupa of pedido.listaPedidoRoupa"
               >
-                <li>
-                  {{ roupa.roupa }} R$ {{ roupa.roupa.preco }}
-                  {{ roupa.roupa.prazoDias }} min
-                </li>
+                <li>{{ roupa.quantidade }}</li>
+                <li>{{ roupa.roupa.descricao }}</li>
+                <li>R$ {{ roupa.roupa.preco }}</li>
+                <li>{{ roupa.roupa.prazoDias }}</li>
               </ul>
             </td>
-            <td>{{ pedido.orcamento.dataPrazo }} min</td>
-            <td>R$ {{ pedido.orcamento.dataPrazo }}</td>
+            <td>{{ pedido.orcamento.dataPrazo }}</td>
+            <td>R$ {{ pedido.orcamento.valor }}</td>
+            <td>{{ pedido.situacao }}</td>
             <td>
               <button
-                *ngIf="pedido.situacao.tipoSituacao === 'EM ABERTO'"
+                *ngIf="pedido.situacao === status.EM_ABERTO"
                 class="btn btn-success"
                 (click)="recolherPedido(pedido)"
               >
