--- a/client/src/app/funcionario-pages/homepage/homepage.component.html
+++ b/client/src/app/funcionario-pages/homepage/homepage.component.html
@@ -21,12 +21,12 @@
             <td>
               <ul
                 class="list-inline"
-                *ngFor="let roupa of pedido.listaPedidoRoupa"
+                *ngFor="let roupa of pedido.listaPedidoRoupas"
               >
-                <li>{{ roupa.quantidade }}</li>
-                <li>{{ roupa.roupa.descricao }}</li>
-                <li>R$ {{ roupa.roupa.preco }}</li>
-                <li>{{ roupa.roupa.prazoDias }}</li>
+                <li>
+                  {{ roupa.quantidade }} {{ roupa.roupa.descricao }}
+                </li>
+                <li> R${{ roupa.roupa.preco }}{{ roupa.roupa.prazoDias }}</li>
               </ul>
             </td>
             <td>{{ pedido.orcamento.dataPrazo }}</td>
