--- a/client/src/app/cliente-pages/pedidos/modal-pagamento/modal-pagamento.component.html
+++ b/client/src/app/cliente-pages/pedidos/modal-pagamento/modal-pagamento.component.html
@@ -11,10 +11,10 @@
   <p>Número do pedido: {{ pedido.numeroPedido }}</p>
   <p>Data do pedido: {{ pedido.dataPedido }}</p>
   <p>Data do pagamento: {{ pedido.dataPagamento }}</p>
-  <p>Situação: {{ pedido.situacao.tipoSituacao }}</p>
+  <p>Situação: {{ pedido.situacao }}</p>
   <p>Prazo: {{ pedido.orcamento.dataPrazo }}</p>
   <p>Valor: {{ pedido.orcamento.valor }}</p>
-  <p *ngFor="let roupa of pedido.listaPedidoRoupa">
+  <p *ngFor="let roupa of pedido.listaPedidoRoupas">
     Perfil1: {{ roupa.pedido }} Perfil2: {{ roupa.quantidade }} Perfil3:
     {{ roupa.roupa.descricao }} Perfil4: {{ roupa.roupa.prazoDias }} Perfil5:
     {{ roupa.roupa.preco }}
