--- a/client/src/app/auth/cadastro/cadastro.component.css
+++ b/client/src/app/auth/cadastro/cadastro.component.css
@@ -8,35 +8,42 @@ body {
     background-position: center center;
     background-size: cover;
 }
+
 .background {
-    background-color: #F2F8FF;;
+    background-color: #F2F8FF;
 }
+
 .container {
-    max-width: 550px;
-    max-height: 80%;
+    max-width: 800px;
+    max-height: 80vh;
+    overflow-y: auto;
     margin: 0 auto;
     text-align: left;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     -webkit-tap-highlight-color: transparent;
-    
 }
 
 .custom-card {
     border-radius: 30px;
+    overflow: hidden;
 }
+
+.card-body {
+    max-height: 80vh;
+    overflow-y: auto;
+    padding: 25px;
+}
+
 .container-logo {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .container-form {
-    padding-top: 25;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-bottom: 25px;
+    padding: 15px;
 }
 
 #cadastro-text {
@@ -47,28 +54,8 @@ body {
     padding-bottom: 7px;
 }
 
-#form-floating-email {
-    padding-top: 4px;
-}
-
-#form-floating-cpf {
-    padding-top: 4px;
-}
-
-#form-floating-nome {
-    padding-top: 4px;
-}
-
-#form-floating-endereco {
-    padding-top: 4px;
-}
-
-#form-floating-complemento {
-    padding-top: 4px;
-}
-
-#form-floating-telefone {
-    padding-top: 4px;
+.form-floating {
+    margin-bottom: 10px;
 }
 
 .form-floating input:focus ~ label,
@@ -112,6 +99,30 @@ body {
     justify-content: flex-end;
 }
 
+.custom-btn-cep {
+    background-color: #3dabe1;
+    width: 300px;
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer; 
+    letter-spacing: inherit;
+}
+
+.custom-btn-cep:hover {
+    background-color: #1c8bc1;
+}
+
+.custom-btn-cep:active {
+    background-color: #66c0eb;
+}
+
+.custom-btn-cep:disabled {
+    background-color: #66c0eb;
+}
+
 .custom-btn {
     background-color: #3dabe1;
     color: #fff;
@@ -122,6 +133,7 @@ body {
     cursor: pointer; 
     letter-spacing: inherit;
 }
+
 .custom-btn:hover {
     background-color: #1c8bc1;
 }
@@ -132,4 +144,36 @@ body {
 
 .custom-btn:disabled {
     background-color: #66c0eb;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.col-md-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.mb-3 {
+    margin-bottom: 0.5rem;
+}
+
+#form-floating-endereco {
+    display: flex;
+    align-items: center;
+}
+
+#form-floating-endereco .form-floating {
+    flex-grow: 1;
+    flex-basis: 70%;
+}
+
+#cep {
+    max-width: 120px;
 }
