--- a/client/src/app/cliente-pages/consulta-pedido/consulta-pedido.component.html
+++ b/client/src/app/cliente-pages/consulta-pedido/consulta-pedido.component.html
@@ -27,7 +27,7 @@
                       name="consulta"
                       id="consulta"
                       placeholder=" "
-                      [(ngModel)]="consultaPedido"
+                      [(ngModel)]="numeroPedido"
                       #consulta="ngModel"
                       required
                       pattern="[0-9]*"
@@ -81,20 +81,14 @@
                 <div class="container-situacao-text">
                   Situação:
                   <span
-                    [ngClass]="{
-                      'text-yellow':
-                        pedido.situacao === 'EM ABERTO',
-                      'text-red':
-                        pedido.situacao === 'REJEITADO' ||
-                        pedido.situacao === 'CANCELADO',
-                      'text-gray': pedido.situacao === 'RECOLHIDO',
-                      'text-blue':
-                        pedido.situacao === 'AGUARDANDO PAGAMENTO',
-                      'text-orange': pedido.situacao === 'PAGO',
-                      'text-green':
-                        pedido.situacao === 'FINALIZADO'
-                    }"
-                  >
+                  [ngClass]="{
+                    'text-yellow': pedido.situacao === Status.EM_ABERTO,
+                    'text-red': pedido.situacao === Status.REJEITADO || pedido.situacao === Status.CANCELADO,
+                    'text-gray': pedido.situacao === Status.RECOLHIDO,
+                    'text-blue': pedido.situacao === Status.AGUARDANDO_PAGAMENTO,
+                    'text-orange': pedido.situacao === Status.PAGO,
+                    'text-green': pedido.situacao === Status.FINALIZADO
+                    }">
                     {{ pedido.situacao }}
                   </span>
                 </div>
@@ -115,8 +109,8 @@
                 </thead>
                 <tbody class="table-items-body custom-tr-items">
                   <tr *ngFor="let item of pedido.listaPedidoRoupas">
-                    <td>{{ item.roupa }}</td>
-                    <td>R${{ formatarValor(item.roupa.preco) }}</td>
+                    <td>{{ item.roupa.descricao }} ({{ item.quantidade }}.qtd)</td>
+                    <td>R${{ formatarValor(item.roupa.preco * item.quantidade) }}</td>
                   </tr>
                 </tbody>
                 <tfoot>
