--- a/client/src/app/funcionario-pages/relatorio-clientes-fieis/relatorio-clientes-fieis.component.html
+++ b/client/src/app/funcionario-pages/relatorio-clientes-fieis/relatorio-clientes-fieis.component.html
@@ -1,4 +1,4 @@
-<div class="background">
+<!-- <div class="background">
     <div
       class="d-flex justify-content-center align-items-center"
       style="min-height: calc(100vh - 80px)"
@@ -63,4 +63,86 @@
       </div>
     </div>
   </div>
-  
+   -->
+
+<!-- RODRIGO -->
+
+<div class="background">
+  <div
+    class="d-flex justify-content-center align-items-center"
+    style="min-height: calc(100vh - 80px)"
+  >
+    <div class="container">
+      <div class="card shadow-lg custom-card border-0">
+        <div class="card-body">
+          <div class="container-relatorio-clientes-texto">
+            <h5 class="relatorio-clientes-text card-title">
+              Relatório de Clientes Fiéis
+            </h5>
+            <h6 class="relatorio-clientes-phrase card-subtitle">
+              Visualize e gere um PDF do relatório dos três clientes mais fiéis.
+            </h6>
+          </div>
+          <div class="container-buttons d-flex justify-content-end">
+            <button
+              class="btn-relatorio"
+              type="button"
+              class="btn btn-primary custom-btn btn-relatorio"
+              (click)="gerarRelatorio()"
+            >
+              Gerar Relatório
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary custom-btn btn-voltar"
+              (click)="voltar()"
+            >
+              Voltar
+            </button>
+            <button
+              type="button"
+              class="btn btn-primary custom-btn btn-pdf"
+              (click)="gerarPDF()"
+              [disabled]="!relatorioClientesGerado"
+            >
+              Gerar PDF
+            </button>
+          </div>
+
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Nome</th>
+                <th>CPF</th>
+                <th>Email</th>
+                <th>Telefone</th>
+                <th>Endereço</th>
+                <th>Qntd Pedidos</th>
+                <th>Receita gerada</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let cliente of listaCliente">
+                <td>{{ cliente.cliente.usuario.nome }}</td>
+                <td>{{ cliente.cliente.cpf }}</td>
+                <td>{{ cliente.cliente.usuario.email }}</td>
+                <td>{{ cliente.cliente.telefone }}</td>
+                <td>
+                  {{ cliente.cliente.endereco.rua }},
+                  {{ cliente.cliente.endereco.numero }} -
+                  {{ cliente.cliente.endereco.cidade }}
+                </td>
+                <td>{{ cliente.quantidadePedidos }}</td>
+                <td>
+                  {{ cliente.receita | currency : "BRL" : "symbol" : "1.2-2" }}
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- RODRIGO -->
