--- a/client/src/app/funcionario-pages/visualizacao-pedidos/visualizacao-pedidos.component.html
+++ b/client/src/app/funcionario-pages/visualizacao-pedidos/visualizacao-pedidos.component.html
@@ -1,50 +1,96 @@
-<br>
+<br />
 <h1 class="text-center">Visualização de Pedidos</h1>
 <div class="filter">
-    <select #selectElement (change)="filtroPedidos(selectElement.value)" class="form-select">
-        <option value="TODOS">TODOS</option>
-        <option value="PEDIDOS DE HOJE">PEDIDOS DE HOJE</option>
-        <option value="PEDIDOS POR DATA">PEDIDOS POR DATA</option>
-    </select>
+  <select
+    #selectElement
+    (change)="filtroPedidos(selectElement.value)"
+    class="form-select"
+  >
+    <option value="TODOS">TODOS</option>
+    <option value="PEDIDOS DE HOJE">PEDIDOS DE HOJE</option>
+    <option value="PEDIDOS POR DATA">PEDIDOS POR DATA</option>
+  </select>
 </div>
 
 <div>
-    <div *ngIf="opcaoSelecionada === 'PEDIDOS POR DATA'" class="date-filter">
-            <label for="startDate" class="dtLabel">Data inicial:</label>
-            <input type="date" id="startDate" name="startDate" [(ngModel)]="startDate" class="dtInput">
-            <label for="endDate" class="dtLabel">Data final:</label>
-            <input type="date" id="endDate" name="endDate" [(ngModel)]="endDate" class="dtInput">
-            <button type="button" class="btn-filter" (click)="filtroPedidos(opcaoSelecionada)">Filtrar</button>
-    </div> 
-    <br>
-    <div class="shadow-lg p-3 mb-5 bg-white rounded">
-        <div id="listaPedidos">
-            <table class="table">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Data Criação</th>
-                    <th scope="col">Roupas</th>
-                    <th scope="col">Prazo do serviço</th>
-                    <th scope="col">Situação</th>
-                    <th scope="col">Ação</th>
-                </tr>
-                <tr *ngFor="let pedido of orderedPedidos">
-                    <td>{{pedido.id}}</td>
-                    <td>{{formatDate(pedido.dataPedido)}}</td>
-                    <td>{{pedido.listaPedidoRoupas}}</td>
-                    <td>{{pedido.orcamento.dataPrazo}}</td>
-                    <td [ngClass]="getStatusColor(pedido.situacao)">{{pedido.situacao}}</td>
-                    <td>
-                        <button *ngIf="pedido.situacao === 'EM ABERTO'" class="btn btn-success" (click)="recolherPedido(pedido)">Recolher</button>
-                    </td>
-                    <td>
-                        <button *ngIf="pedido.situacao === 'RECOLHIDO'" class="btn btn-success" (click)="confirmarLavagem(pedido)">Confirmar Lavagem</button>
-                    </td>
-                    <td>
-                        <button *ngIf="pedido.situacao === 'AGUARDANDO PAGAMENTO'" class="btn btn-success" (click)="finalizarPedido(pedido)">Finalizar Pedido</button>
-                    </td>
-                </tr>
-            </table>
-        </div>
+  <div *ngIf="opcaoSelecionada === 'PEDIDOS POR DATA'" class="date-filter">
+    <label for="startDate" class="dtLabel">Data inicial:</label>
+    <input
+      type="date"
+      id="startDate"
+      name="startDate"
+      [(ngModel)]="startDate"
+      class="dtInput"
+    />
+    <label for="endDate" class="dtLabel">Data final:</label>
+    <input
+      type="date"
+      id="endDate"
+      name="endDate"
+      [(ngModel)]="endDate"
+      class="dtInput"
+    />
+    <button
+      type="button"
+      class="btn-filter"
+      (click)="filtroPedidos(opcaoSelecionada)"
+    >
+      Filtrar
+    </button>
+  </div>
+  <br />
+  <div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <div id="listaPedidos">
+      <table class="table">
+        <tr>
+          <th scope="col">Pedido</th>
+          <th scope="col">Data Criação</th>
+          <th scope="col">Roupas</th>
+          <th scope="col">Prazo do serviço</th>
+          <th scope="col">Situação</th>
+          <th scope="col">Ação</th>
+        </tr>
+        <tr *ngFor="let pedido of orderedPedidos">
+          <td>{{ pedido.numeroPedido }}</td>
+          <td>{{ formatDate(pedido.dataPedido) }}</td>
+
+          <ul *ngFor="let roupa of pedido.listaPedidoRoupas">
+              <li>Peça: {{ roupa.roupa.descricao }}, Prazo: {{ roupa.roupa.prazoDias }} dia(s), Preço: {{ roupa.roupa.preco }}</li>
+
+          </ul>
+          <td>{{ formatDatePlus(pedido.orcamento.dataPrazo) }}</td>
+          <td [ngClass]="getStatusColor(pedido.situacao)">
+            {{ pedido.situacao }}
+          </td>
+          <td>
+            <button
+              *ngIf="pedido.situacao === statusEnum.EM_ABERTO"
+              class="btn btn-success"
+              (click)="recolherPedido(pedido)"
+            >
+              Recolher
+            </button>
+          </td>
+          <td>
+            <button
+              *ngIf="pedido.situacao === statusEnum.RECOLHIDO"
+              class="btn btn-success"
+              (click)="confirmarLavagem(pedido)"
+            >
+              Confirmar Lavagem
+            </button>
+          </td>
+          <td>
+            <button
+              *ngIf="pedido.situacao === statusEnum.PAGO"
+              class="btn btn-success"
+              (click)="finalizarPedido(pedido)"
+            >
+              Finalizar Pedido
+            </button>
+          </td>
+        </tr>
+      </table>
     </div>
+  </div>
 </div>
