--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           <a
             *ngIf="temPermissao('CLIENTE')"
             class="nav-link"
-            [routerLink]="['pedidos']"
+            [routerLink]="['homepage-cliente']"
             >Início</a
           >
         </li>
