--- a/client/src/app/cliente-pages/homepage-cliente/homepage-cliente.component.html
+++ b/client/src/app/cliente-pages/homepage-cliente/homepage-cliente.component.html
@@ -1,1 +1,52 @@
-<p>homepage-cliente works!</p>
+<h1 class="text-center">Pedidos em Aberto</h1>
+<div class="container">
+  <div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <div id="listaPedidos" *ngIf="!exibeLista">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Nº Pedido</th>
+            <th scope="col">Data Pedido</th>
+            <th scope="col">Roupas</th>
+            <th scope="col">Prazo</th>
+            <th scope="col">Valor Total</th>
+            <th scope="col">Situação</th>
+            <th scope="col">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let pedido of pedidos">
+            <td>{{ pedido.numeroPedido }}</td>
+            <td>{{ pedido.dataPedido | date : "dd/MM/yyyy HH:mm" }}</td>
+            <td>
+              <ul
+                class="list-inline"
+                *ngFor="let roupa of pedido.listaPedidoRoupas"
+              >
+                <li>
+                  {{ roupa.quantidade }} {{ roupa.roupa.descricao }}
+                </li>
+                <li> R${{ roupa.roupa.preco }}{{ roupa.roupa.prazoDias }}</li>
+              </ul>
+            </td>
+            <td>{{ pedido.orcamento.dataPrazo }}</td>
+            <td>R$ {{ pedido.orcamento.valor }}</td>
+            <td>{{ pedido.situacao }}</td>
+            <td>
+              <button
+                *ngIf="pedido.situacao === status.EM_ABERTO"
+                class="btn btn-success"
+                (click)="cancelarPedido(pedido)"
+              >
+                Cancelar
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="text-center" *ngIf="exibeLista">
+      <p>Não há pedidos em aberto a serem exibidos</p>
+    </div>
+  </div>
+</div>
