--- a/client/src/app/cliente-pages/pedido/pedido.component.css
+++ b/client/src/app/cliente-pages/pedido/pedido.component.css
@@ -5,13 +5,24 @@ body {
     background-color: #f0f0f0;
   }
 
+  .background {
+    background-color: #F2F8FF;
+  }
+
   .container {
-    max-width: 600px;
+    max-width: 800px;
     margin: 20px auto;
     background-color: #fff;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
+  }
+
+  select {
+    height: 42px;
+    font-size: 18px;
   }
 
   h1 {
@@ -30,14 +41,23 @@ body {
     width: 100px;
   }
 
+  .scroll-view {
+    max-height: 205px;
+    overflow-y: auto;
+  }
+
   th, td {
-    padding: 10px;
+    padding: 8px;
     text-align: left;
     border-bottom: 1px solid #ddd;
   }
 
   th {
     background-color: #f2f2f2;
+  }
+
+  .scroll-view tbody tr:hover td, .table-hover tbody tr:hover th {
+    background-color:  #e2f5fff1;
   }
 
   .result {
@@ -47,3 +67,41 @@ body {
   #aprovar {
     margin-right: .5rem;
   }
+
+  button {
+    border: none;
+    border-radius: 30px; 
+    padding: 10px 20px;
+    font-size: 18px;
+    cursor: pointer; 
+    letter-spacing: inherit;
+    margin-top: 6px;
+  }
+  
+  #remove-btn{
+    padding: 6px 12px;
+    font-size: 12px;
+    cursor: pointer; 
+    letter-spacing: inherit;
+    margin-top: 0px;
+  }
+
+  .custom-btn {
+    background-color: #3dabe1;
+    color: #fff;
+    border: none;
+    margin-bottom: 10px;
+  }
+
+  #aprovar:active {
+    background-color: rgb(0, 182, 0);
+  }
+
+  #aprovar:disabled {
+    background-color: rgba(0, 160, 0, 0.637);
+  }
+
+  .info-text{
+    color: #32445c;
+  }
+
